--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+main{
+    text-align: center;
+}
+
+.btnPrincipal {
+  padding: 0.8em;
+  margin:auto;
+  background-color: #213785;
+  color: white;
+  border: none;
+  outline: none;
+  border-radius: 0.3em;
+  cursor: pointer;
+}
+.btnPrincipal:hover {
+  opacity: 0.8;
+}
